...
        lineTo(b.right - rB, b.top)
        arcTo(Rect(Offset(b.right - rB, b.top + rB), rB), 270f, 180f, false) // B 的半圆伸出端 -> (b.right - rB, b.bottom)
        lineTo(a.left + rA, a.bottom) // B 与 A 连成一条直线的底边
        arcTo(Rect(Offset(a.left + rA, a.bottom - rA), rA), 90f, 90f, false) // A 左下角 -> (a.left, a.bottom - rA)
        lineTo(a.left, a.top + rA)
        arcTo(Rect(Offset(a.left + rA, a.top + rA), rA), 180f, 90f, false) // A 左上角 -> (a.left + rA, a.top)
        close()
    }
}

